# REEM-C_Balance_Control

./: CMakeLists.txt  package.xml  reemc_balance_control_plugins.xml  report.md
config/: balance_control.yaml
data/report_data/: CPControl.csv  CP_PDControl.csv  ControllerResults.m  KalmanFilterData.m  KalmanTest.csv  KalmanTest_zmp.csv  LQGControl40.csv  LQRControl.csv  LQRControl_Jerk_40.csv  NoControl.csv  PControl.csv  PreviewControl.csv  ZMP_filtered.csv  ZMP_unfiltered.csv  resultPlots.py  stateEstimation.csv  stateEstimation2.csv  system_analysis.m  zmp_analysis.m
include/: utils.hpp  zmp_controller.hpp
launch/: estimators.launch
rviz/: blance_control.rviz
src/: zmp_controller.cpp
urdf/: reemc_full.urdf
