<?xml version="1.0"?>
<package>
  <name>reemc_balance_control</name>
  <version>0.1.0</version>
  <description>The reemc_balance_control package</description>

  <maintainer email="rnirnai@gmail.com">Nirnai Rao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>
    <controller_interface plugin="${prefix}/reemc_balance_control_plugins.xml"/>
  </export>

</package>
